deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-deployment
  labels:
    app: simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
        - name: simple-app
          image: gcr.io/concise-quarter-274612/my-node-alpine
          ports:
            - containerPort: 11130

# !!! Deployment file for gke.
# Application work son 11130 port
# Image comes from gcr.
