service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
spec:
  type: LoadBalancer
  selector:
    app: simple-app
  ports:
    - port: 8080
      targetPort: 11130
