ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "mynodeapp"
  namespace: "default"
spec:
  rules:
    - http:
        paths:
          - path: "/hello"
            backend:
              serviceName: "simple-app"
              servicePort: 8080
